--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -105,6 +105,8 @@
           <li><a target="_blank" href="https://aml4td.org/">Applied Machine Learning for Tabular Data</a></li>
           <li><a target="_blank" href="https://probml.github.io/pml-book/">"Probabilistic Machine Learning" - a book series by Kevin Murphy</a></li>
           <li><a target="_blank" href="https://candes.su.domains/teaching/">Emmanuel Candès courses at Stanford</a> </li>
+          <li><a target="_blank" href="https://www.trainindata.com/p/books">Feature Engineering and Feature Selection Books</a></li>
+          <li><a target="_blank" href="https://github.com/awesomedata/awesome-public-datasets">Awesome Public Datasets</a></li>
         </ul>
 
     </div>
