--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -93,6 +93,8 @@
           <li><a href="https://www.acodedaily.com">Ejercicios de programaicon con dificultad progresiva (ladder)</a></li>
           <li><a href="https://codeforces.com">CodeForces (Competencias de Programacion y Algoritmos)</a></li>
           <li><a href="https://deitel.com/intro-to-python-for-computer-science-and-data-science/">Intro to Python® for Computer Science and Data Science: Learning to Program with AI, Big Data and the Cloud</a></li>
+          <li><a href="https://samwho.dev/big-o/">Visual Intro to BigO</a></li>
+          <li><a href="https://ocw.mit.edu/courses/6-1200j-mathematics-for-computer-science-spring-2024/">MIT: Mathematics For Computer Science</a></li>
         </ul>
 
     </div>
