--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -107,6 +107,8 @@
           <li><a target="_blank" href="https://candes.su.domains/teaching/">Emmanuel Candès courses at Stanford</a> </li>
           <li><a target="_blank" href="https://www.trainindata.com/p/books">Feature Engineering and Feature Selection Books</a></li>
           <li><a target="_blank" href="https://github.com/awesomedata/awesome-public-datasets">Awesome Public Datasets</a></li>
+          <li><a target="_blank" href="https://github.com/krzjoa/awesome-python-data-science">Awesome Python Data Science Tools</a></li>
+          <li><a target="_blank" href="https://github.com/automl/nanoTabPFN">nanoTabPFN: A tiny library for tabular data</a></li>
         </ul>
 
     </div>
