--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -100,6 +100,8 @@
           <li><a target="_blank" href="https://fleuret.org/dlc/">Deep Learning course by Francois Fleuret</a></li>  
           <li><a target="_blank" href="https://atcold.github.io/NYU-AISP24/">Artificial Intelligence (AI) course at NYU by Alfredo Canziani</a></li>
           <li><a target="_blank" href="https://atcold.github.io/NYU-DLSP20/">Deep Learning course at NYU by Alfredo Canziani</a></li>
+          <li><a target="_blank" href="https://atcold.github.io/NYU-DLFL25U/">intro to DEEP LEARNING (Undergrad)</a></li>
+          <li><a target="_blank" href="https://karpathy.ai/zero-to-hero.html">Neural Networks: Zero to Hero by Andrej Karpathy</a>
           <li><a target="_blank" href="https://web.stanford.edu/class/cs224n/">Natural Language Processing with Deep Learning at Stanford</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4">[Videos]</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW">[More Videos]</a></li>
           <li><a target="_blank" href="https://cme295.stanford.edu/syllabus/">Stanford Course CME 295: Transformers and LLMs</a></li>
           <li><a target="_blank" href="https://arxiv.org/abs/1603.07285">A guide to convolution arithmetic for deep learning</a></li>
